--- a/GCG_frontend/index.html
+++ b/GCG_frontend/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/file.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GCG</title>
+    
+    <!-- PWA Meta Tags -->
+    <meta name="description" content="The coding community of GLA University - coding contests and leaderboards" />
+    <meta name="theme-color" content="#3b82f6" />
+    <link rel="apple-touch-icon" href="/icon.svg" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="GCG" />
+    
+    <title>GCG - GLA Coding Group</title>
   </head>
   <body>
     <div id="root"></div>
